--- a/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
+++ b/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
@@ -42,7 +42,7 @@ pipeline:
                   identifier: Build
                   spec:
                     connectorRef: dockerHubReadOnly
-                    repo: tanayharness/WebGoat
+                    repo: tanayharness/webgoat
                     tags:
                       - latest
                     envVariables:
