--- a/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
+++ b/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
@@ -153,6 +153,50 @@ pipeline:
                       spec:
                         private_key: SBOM_Attest
                         password: SBOM_Attest_02
+              - stepGroup:
+                  name: Container Scan
+                  identifier: Container_Scan
+                  steps:
+                    - parallel:
+                        - step:
+                            type: AquaTrivy
+                            name: AquaTrivy_1
+                            identifier: AquaTrivy_1
+                            spec:
+                              mode: orchestration
+                              config: default
+                              target:
+                                type: container
+                                detection: auto
+                              advanced:
+                                log:
+                                  level: info
+                              privileged: true
+                              image:
+                                type: docker_v2
+                                tag: latest
+                                name: tanayharness/webgoat
+                              sbom:
+                                generate: true
+                                format: spdx-json
+                        - step:
+                            type: Grype
+                            name: Grype_1
+                            identifier: Grype_1
+                            spec:
+                              mode: orchestration
+                              config: default
+                              target:
+                                type: container
+                                detection: auto
+                              advanced:
+                                log:
+                                  level: info
+                              privileged: true
+                              image:
+                                type: docker_v2
+                                tag: latest
+                                name: tanayharness/weggoat
           platform:
             os: Linux
             arch: Amd64
