--- a/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
+++ b/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
@@ -130,7 +130,7 @@ pipeline:
                       type: docker
                       spec:
                         connector: dockerHubReadOnly
-                        image: webgoat:latest
+                        image: tanayharness/webgoat:latest
                     signing:
                       type: cosign
                       spec:
@@ -147,7 +147,7 @@ pipeline:
                       type: docker
                       spec:
                         connector: dockerHubReadOnly
-                        repo: webgoat:latest
+                        repo: tanayharness/webgoat:latest
                     attestation:
                       type: cosign
                       spec:
@@ -211,7 +211,7 @@ pipeline:
                       type: docker
                       spec:
                         connector: dockerHubReadOnly
-                        image: webgoat:latest
+                        image: tanayharness/webgoat:latest
                     attestation:
                       type: cosign
                       spec:
