Update pipeline STO-Master

--- a/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
+++ b/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
@@ -196,7 +196,7 @@ pipeline:
                               image:
                                 type: docker_v2
                                 tag: latest
-                                name: tanayharness/weggoat
+                                name: tanayharness/webgoat
               - step:
                   type: SscaOrchestration
                   name: Image SBOM
