Update pipeline STO-Master

--- a/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
+++ b/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
@@ -13,7 +13,7 @@ pipeline:
         sparseCheckout: []
   stages:
     - stage:
-        name: "Build "
+        name: Build and Scan
         identifier: Build
         description: ""
         type: CI
