Update pipeline STO-Master

--- a/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
+++ b/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
@@ -409,4 +409,9 @@ pipeline:
                   timeout: 10m
                   spec:
                     command: apply
+                    target: []
+                    replace: []
+                  when:
+                    stageStatus: Success
+                    condition: "false"
         tags: {}
