Update pipeline STO-Master

--- a/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
+++ b/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
@@ -452,3 +452,4 @@ pipeline:
                     stageStatus: Success
                     condition: "false"
         tags: {}
+  allowStageExecutions: true
