Update pipeline STO-Master

--- a/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
+++ b/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
@@ -332,9 +332,7 @@ pipeline:
                                   config: default
                                   target:
                                     type: repository
-                                    detection: manual
-                                    spec:
-                                      path: <+strategy.matrix.scanPath>
+                                    detection: auto
                                   advanced:
                                     log:
                                       level: info
@@ -347,9 +345,7 @@ pipeline:
                                   config: default
                                   target:
                                     type: repository
-                                    detection: manual
-                                    spec:
-                                      path: <+strategy.matrix.scanPath>
+                                    detection: auto
                                   advanced:
                                     log:
                                       level: info
