--- a/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
+++ b/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
@@ -332,6 +332,7 @@ pipeline:
                                   config: default
                                   target:
                                     type: repository
+                                    workspace: <+repeat.item>
                                     detection: auto
                                   advanced:
                                     log:
