Update pipeline STO-Master

--- a/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
+++ b/.harness/orgs/traceablecsindia/projects/tanays/pipelines/STOMaster.yaml
@@ -317,8 +317,8 @@ pipeline:
                       name: Scan
                       identifier: Scan
                       strategy:
-                        matrix:
-                          scanPath:
+                        repeat:
+                          items:
                             - /harness/IaCM-TFVARS
                             - /harness/IaCM
                       steps:
